[gd_scene load_steps=4 format=3 uid="uid://b5gx52xo32ick"]

[ext_resource type="Script" uid="uid://cls2ibf4qica5" path="res://alchemy/table/alchemy_table_element.gd" id="1_02pvl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c4xi5"]
radius = 36.0

[sub_resource type="CircleShape2D" id="CircleShape2D_igi57"]
radius = 49.0102

[node name="AlchemyTableElement" type="ColorRect"]
custom_minimum_size = Vector2(72, 72)
offset_right = 72.0
offset_bottom = 74.0
color = Color(1, 1, 1, 0)
script = ExtResource("1_02pvl")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_top = 25.0
offset_right = 72.0
offset_bottom = 48.0
text = "Element"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ElementArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ElementArea"]
position = Vector2(36, 37)
shape = SubResource("CircleShape2D_c4xi5")

[node name="ResearchArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResearchArea"]
position = Vector2(36, 37)
shape = SubResource("CircleShape2D_igi57")
